--- a/.github/assets/README.html
+++ b/.github/assets/README.html
@@ -19,7 +19,7 @@
     <div><img src="https://github.com/yedhrab/DarkCode-Theme-JB/raw/master/.github/assets/settings_appearance.png"
               width="500"/></div>
 </div>
-<h2 id="%F0%9F%92%96-destek-ve-i%CC%87leti%C5%9Fim">💖 Destek ve İletişim</h2>
+<h2 id="%F0%9F%92%96-destek-ve-i%CC%87leti%C5%9Fim">💖 Support & Contact </h2>
 <p>​<a href="https://github.com/yedhrab">​<img
         src="https://github.com/yedhrab/DarkCode-Theme-JB/raw/master/.github/assets/github_32px.png" alt="Github">​</a>
     <a href="https://www.linkedin.com/in/yemreak/">​<img
@@ -32,7 +32,7 @@
 <p>​<a href="https://www.patreon.com/yemreak/">​<img
         src="https://github.com/yedhrab/DarkCode-Theme-JB/raw/master/.github/assets/become_a_patron_32px.png"
         alt="Patreon"></a></p>
-<h2 id="%F0%9F%94%8F-lisans">🔏 Lisans</h2>
+<h2 id="%F0%9F%94%8F-lisans">🔏 License</h2>
 <p><strong>The</strong> <a href="https://choosealicense.com/licenses/apache-2.0/"><strong>Apache 2.0
     License</strong></a> <strong>©️ Yunus Emre Ak</strong></p>
 <p><img src="https://github.com/yedhrab/DarkCode-Theme-JB/raw/master/.github/assets/ysigniture-trans.png" alt="YEmreAk">
